src/test/resources/errors/if-condition.intp
if ("test") {
  x = x + 1
}